[MOD] - Modify file handling