@@ -2,10 +2,14 @@ package utils;
 
 import java.io.IOException;
 import java.nio.file.Files;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 
 public class FileReader {
-    public static String readProgram(String filePath) throws IOException {
-        return new String(Files.readAllBytes(Paths.get(filePath)));
+    public static String readCode(String filePath) {
+        try {
+            return Files.readString(Path.of(filePath));
+        } catch (IOException e) {
+            throw new RuntimeException("Couldn't read file on path: " + filePath, e);
+        }
     }
 }
